@@ -2,6 +2,7 @@ prometheus (1.7.1+ds-2) UNRELEASED; urgency=medium
 
   * Update versioned dependency on -common.
   * Remove now unneeded lintian overrides.
+  * Replace dpkg-parsechangelog with /usr/share/dpkg/pkg-info.mk
 
  -- Martín Ferrari <tincho@debian.org>  Thu, 17 Aug 2017 12:57:42 +0000
 
